--- a/src/pages/programs/code-clinic.astro
+++ b/src/pages/programs/code-clinic.astro
@@ -2,8 +2,14 @@
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import SectionHeader from '../../components/SectionHeader.astro';
 import CalloutCard from '../../components/CalloutCard.astro';
+import { getProgramBySlug } from '../../utils/markdown.js';
 
-
+const programSlug = 'code_clinic';
+const programData = getProgramBySlug(programSlug);
+const heroImage = programData?.metadata?.image
+  ? `/images/cards/${programData.metadata.image}`
+  : '/images/2025/04/denimkids.jpeg';
+const heroAlt = programData?.title ?? 'Code Clinic';
 ---
 
 <BaseLayout
@@ -38,11 +44,7 @@ import CalloutCard from '../../components/CalloutCard.astro';
           <li>Always free to attend</li>
         </ul>
         <figure class="hero__media">
-          <img
-            src="/images/2025/04/denimkids.jpeg"
-            alt="Students working together during an advanced coding workshop"
-            loading="lazy"
-          />
+          <img src={heroImage} alt={`${heroAlt} illustration`} loading="lazy" />
         </figure>
       </CalloutCard>
     </div>
