--- a/src/components/ProgramCard.astro
+++ b/src/components/ProgramCard.astro
@@ -27,6 +27,7 @@ const fallbackStyle = hasCardDirectory ? undefined : 'height: 190px; padding-top
   .card__media {
     margin: 0;
     width: 100%;
+    aspect-ratio: 7 / 4;
 
     display: flex;
     align-items: center;
@@ -38,10 +39,11 @@ const fallbackStyle = hasCardDirectory ? undefined : 'height: 190px; padding-top
 
   .card__media img {
     display: block;
-
+    width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
+    border-radius: var(--radius-lg) var(--radius-lg) 0 0;
   }
 
   :global(.card-grid) .program-card {
