--- a/src/pages/classes/hour_of_microbit.astro
+++ b/src/pages/classes/hour_of_microbit.astro
@@ -3,6 +3,14 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import HeroSection from "../../components/HeroSection.astro";
 import Section from "../../components/Section.astro";
 import SectionHeader from "../../components/SectionHeader.astro";
+import { getClassBySlug } from "../../utils/markdown.js";
+
+const classSlug = "hour_of_microbit";
+const classData = getClassBySlug(classSlug);
+const heroImage = classData?.metadata?.image
+  ? `/images/cards/${classData.metadata.image}`
+  : "/images/cards/computer-robot.png";
+const heroAlt = classData?.title ?? "Hour of Micro:bit";
 ---
 
 <BaseLayout
@@ -15,11 +23,7 @@ import SectionHeader from "../../components/SectionHeader.astro";
       Short introductory class to the Micro:bit microcontroller platform.
     </p>
     <div slot="media" class="program-hero__media">
-      <img
-        src="/images/cards/computer-robot.png"
-        alt="Micro:bit illustration"
-        loading="eager"
-      />
+      <img src={heroImage} alt={`${heroAlt} illustration`} loading="eager" />
     </div>
   </HeroSection>
 
