--- a/src/pages/classes/java_weekly.astro
+++ b/src/pages/classes/java_weekly.astro
@@ -3,6 +3,14 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import HeroSection from "../../components/HeroSection.astro";
 import Section from "../../components/Section.astro";
 import SectionHeader from "../../components/SectionHeader.astro";
+import { getClassBySlug } from "../../utils/markdown.js";
+
+const classSlug = "java_weekly";
+const classData = getClassBySlug(classSlug);
+const heroImage = classData?.metadata?.image
+  ? `/images/cards/${classData.metadata.image}`
+  : "/images/cards/java.png";
+const heroAlt = classData?.title ?? "Java Weekly Classes";
 ---
 
 <BaseLayout
@@ -15,11 +23,7 @@ import SectionHeader from "../../components/SectionHeader.astro";
       Comprehensive Java programming from beginner to advanced levels, preparing students for AP Computer Science and professional careers.
     </p>
     <div slot="media" class="program-hero__media">
-      <img
-        src="/images/cards/java.png"
-        alt="Java programming illustration"
-        loading="eager"
-      />
+      <img src={heroImage} alt={`${heroAlt} illustration`} loading="eager" />
     </div>
   </HeroSection>
 
