--- a/src/pages/classes/makecode_arcade.astro
+++ b/src/pages/classes/makecode_arcade.astro
@@ -3,6 +3,14 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import HeroSection from "../../components/HeroSection.astro";
 import Section from "../../components/Section.astro";
 import SectionHeader from "../../components/SectionHeader.astro";
+import { getClassBySlug } from "../../utils/markdown.js";
+
+const classSlug = "makecode_arcade";
+const classData = getClassBySlug(classSlug);
+const heroImage = classData?.metadata?.image
+  ? `/images/cards/${classData.metadata.image}`
+  : "/images/cards/league_code.png";
+const heroAlt = classData?.title ?? "MakeCode Arcade Games";
 ---
 
 <BaseLayout
@@ -15,11 +23,7 @@ import SectionHeader from "../../components/SectionHeader.astro";
       Build games in block code or JavaScript and deploy them to your own handheld Game Boy-style console.
     </p>
     <div slot="media" class="program-hero__media">
-      <img
-        src="/images/cards/league_code.png"
-        alt="MakeCode Arcade Games illustration"
-        loading="eager"
-      />
+      <img src={heroImage} alt={`${heroAlt} illustration`} loading="eager" />
     </div>
   </HeroSection>
 
