--- a/src/pages/classes/motors_clinic.astro
+++ b/src/pages/classes/motors_clinic.astro
@@ -3,6 +3,14 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import HeroSection from "../../components/HeroSection.astro";
 import Section from "../../components/Section.astro";
 import SectionHeader from "../../components/SectionHeader.astro";
+import { getClassBySlug } from "../../utils/markdown.js";
+
+const classSlug = "motors_clinic";
+const classData = getClassBySlug(classSlug);
+const heroImage = classData?.metadata?.image
+  ? `/images/cards/${classData.metadata.image}`
+  : "/images/cards/computer-robot.png";
+const heroAlt = classData?.title ?? "Motors Clinic";
 ---
 
 <BaseLayout
@@ -15,11 +23,7 @@ import SectionHeader from "../../components/SectionHeader.astro";
       Two-hour class on programming brush motors, stepper motors, and hobby servos.
     </p>
     <div slot="media" class="program-hero__media">
-      <img
-        src="/images/cards/computer-robot.png"
-        alt="Motors clinic illustration"
-        loading="eager"
-      />
+      <img src={heroImage} alt={`${heroAlt} illustration`} loading="eager" />
     </div>
   </HeroSection>
 
