--- a/src/pages/classes/python-apprentice.astro
+++ b/src/pages/classes/python-apprentice.astro
@@ -4,6 +4,14 @@ import HeroSection from "../../components/HeroSection.astro";
 import Section from "../../components/Section.astro";
 import SectionHeader from "../../components/SectionHeader.astro";
 import CalloutCard from "../../components/CalloutCard.astro";
+import { getClassBySlug } from "../../utils/markdown.js";
+
+const classSlug = "python_apprentice";
+const classData = getClassBySlug(classSlug);
+const heroImage = classData?.metadata?.image
+  ? `/images/cards/${classData.metadata.image}`
+  : "/images/cards/python.png";
+const heroAlt = classData?.title ?? "Python Apprentice";
 ---
 
 <BaseLayout
@@ -16,11 +24,7 @@ import CalloutCard from "../../components/CalloutCard.astro";
       Master Python fundamentals with hands-on projects. Learn variables, loops, functions, and basic programming concepts in the world's most popular language.
     </p>
     <div slot="media" class="program-hero__media">
-      <img
-        src="/images/cards/python.png"
-        alt="Python programming illustration"
-        loading="eager"
-      />
+      <img src={heroImage} alt={`${heroAlt} illustration`} loading="eager" />
     </div>
   </HeroSection>
 
