--- a/src/pages/classes/python-games.astro
+++ b/src/pages/classes/python-games.astro
@@ -4,6 +4,14 @@ import HeroSection from "../../components/HeroSection.astro";
 import Section from "../../components/Section.astro";
 import SectionHeader from "../../components/SectionHeader.astro";
 import CalloutCard from "../../components/CalloutCard.astro";
+import { getClassBySlug } from "../../utils/markdown.js";
+
+const classSlug = "python_games";
+const classData = getClassBySlug(classSlug);
+const heroImage = classData?.metadata?.image
+  ? `/images/cards/${classData.metadata.image}`
+  : "/images/cards/python.png";
+const heroAlt = classData?.title ?? "Python Games";
 ---
 
 <BaseLayout
@@ -16,11 +24,7 @@ import CalloutCard from "../../components/CalloutCard.astro";
       Create engaging games while learning advanced Python concepts. Build arcade games, puzzles, and interactive applications using Python and Pygame.
     </p>
     <div slot="media" class="program-hero__media">
-      <img
-        src="/images/cards/python.png"
-        alt="Python game development illustration"
-        loading="eager"
-      />
+      <img src={heroImage} alt={`${heroAlt} illustration`} loading="eager" />
     </div>
   </HeroSection>
 
