--- a/src/pages/classes/python_orbitlab.astro
+++ b/src/pages/classes/python_orbitlab.astro
@@ -3,6 +3,14 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import HeroSection from "../../components/HeroSection.astro";
 import Section from "../../components/Section.astro";
 import SectionHeader from "../../components/SectionHeader.astro";
+import { getClassBySlug } from "../../utils/markdown.js";
+
+const classSlug = "python_orbitlab";
+const classData = getClassBySlug(classSlug);
+const heroImage = classData?.metadata?.image
+  ? `/images/cards/${classData.metadata.image}`
+  : "/images/cards/orbit-lab.png";
+const heroAlt = classData?.title ?? "Python OrbitLab";
 ---
 
 <BaseLayout
@@ -15,11 +23,7 @@ import SectionHeader from "../../components/SectionHeader.astro";
       Build solar system simulations to learn orbital mechanics and scientific computing.
     </p>
     <div slot="media" class="program-hero__media">
-      <img
-        src="/images/cards/python.png"
-        alt="Python OrbitLab illustration"
-        loading="eager"
-      />
+      <img src={heroImage} alt={`${heroAlt} illustration`} loading="eager" />
     </div>
   </HeroSection>
 
