--- a/src/components/ClassCard.astro
+++ b/src/components/ClassCard.astro
@@ -13,7 +13,9 @@ const { img, alt, slug, title, level, description } = Astro.props;
 
 <div class="class-card" id={`class-${slug}`}>
   <div class="class-card__image">
-    <img src={img} alt={alt} />
+    <a href={`/classes/${slug}`} class="class-card__image-link">
+      <img src={img} alt={alt} />
+    </a>
   </div>
   <div class="class-card__content">
     <div class="class-card__header">
@@ -55,6 +57,12 @@ const { img, alt, slug, title, level, description } = Astro.props;
     width: 350px;
     height: 200px;
     overflow: hidden;
+  }
+
+  .class-card__image-link {
+    display: block;
+    width: 100%;
+    height: 100%;
   }
 
   .class-card__image img {
