--- a/src/components/SpotlightCard.astro
+++ b/src/components/SpotlightCard.astro
@@ -32,7 +32,7 @@ const getYouTubeId = (url: string) => {
 
 const youtubeId = videoUrl ? getYouTubeId(videoUrl) : null;
 const embedUrl = youtubeId ? `https://www.youtube.com/embed/${youtubeId}` : null;
-const thumbnailUrl = videoThumbnail || (youtubeId ? `https://img.youtube.com/vi/${youtubeId}/hqdefault.jpg` : null);
+//const thumbnailUrl = videoThumbnail || (youtubeId ? `https://img.youtube.com/vi/${youtubeId}/hqdefault.jpg` : null);
 ---
 
 <div 
